# coral-qt

./: .gitignore  CMakeLists.txt  EVENT_HANDLING.md  README.md
modules/qt/: AbstractItemModel.csl  AbstractItemModel.lua  AbstractItemModelDelegate.lua  AbstractListModel.lua  AbstractListModelDelegate.lua  ConnectionHandler.lua  DataModel.lua  EventHandler.lua  Exception.csl  GLWidget.csl  IAbstractItemModel.csl  IAbstractItemModelDelegate.csl  IConnectionHandler.csl  IEventHandler.csl  IGLContext.csl  IGLWidget.csl  IInputListener.csl  IItemSelectionModel.csl  IObjectProvider.csl  IObjectSource.csl  IPainter.csl  ISystem.csl  ITimerCallback.csl  ITreeItemObserver.csl  Icon.csl  InputListener.lua  ItemDataRole.csl  KeyboardModifiers.csl  ListItemModel.lua  MimeData.csl  MouseButtons.csl  Object.csl  System.csl  Timer.lua  Types.lua  Variant.csl  __init.lua
samples/: ListViewDialog.lua
samples/OpenGL/: OpenGL.lua  OpenGLWindow.ui
samples/coralPathEditor/: CoralPathEditor.lua  CoralPathEditorDialog.lua  CoralPathEditorDialog.ui  EditorApp.lua  EditorDialog.ui  Main.lua  MainWindow.ui
samples/coralTypeBrowser/: CoralTypeBrowser.ui  Main.lua  MainWindow.ui
samples/cursor/: Main.lua  MainWindow.ui
samples/eventHandling/: Main.lua  SimpleDialog.ui
samples/extensibleUIs/: ExtensibleUIs.ui  Main.lua
samples/extensibleUIs/plugins/: extendCentralWidget.lua  extendMenus.lua  extendStatusBar.lua  extendToolBar.lua
samples/itemModel/: ListViewDialog.lua  ListViewDialog.ui  Main.lua  MyListModel.lua
samples/opengl/: BasicCubeSample.csl  ICubeParameters.csl  Main.lua  MainWindow.ui
samples/opengl/src/: BasicCubeSample.cpp  BasicCubeSample.h  CMakeLists.txt
samples/simple/: Main.lua  SignalSlots.lua  TestWindow.ui
src/: AbstractItemModel.cpp  AbstractItemModel.h  CMakeLists.txt  ConnectionHub.cpp  ConnectionHub.h  EventHub.cpp  EventHub.h  GLWidget.cpp  GLWidget.h  Icon.cpp  MimeData.cpp  Object.cpp  QObjectWrapper.h  System.cpp  Timer.cpp  Timer.h  TimerCallbackNotifier.cpp  TimerCallbackNotifier.h  ValueConverters.cpp  ValueConverters.h  Variant.cpp
tests/: CMakeLists.txt  EventHandlerTests.lua  LuaSlotsConnectionTests.lua  ObjectWrapperTests.lua  TestWindow.ui  WindowLoadingTests.lua  eventHandlerTests.lua  invalid.ui  luaSlotsConnectionTests.lua  sample.lua  test.lua  windowLoadingTest.lua  windowLoadingTests.lua
tests/test_resources/: TestWindow.ui
